_EXTEND/.antlr/BKOOLParser.py
# Generated from d:\1_University\HK212\prin_prog_lang\_EXTEND\BKOOL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'continue'", "'break'", "'do'", 
                     "'to'", "'downto'", "'int'", "'float'", "'void'", "'boolean'", 
                     "'string'", "'class'", "'extends'", "'static'", "'final'", 
                     "'new'", "'this'", "'nil'", "'if'", "'then'", "'else'", 
                     "'for'", "<INVALID>", "';'", "':'", "'.'", "','", "'['", 
                     "']'", "'('", "')'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'*'", 
                     "'\\'", "'!='", "'='", "'<'", "'<='", "'||'", "'!'", 
                     "'-'", "'/'", "'%'", "'=='", "'>'", "'>='", "'&&'", 
                     "'^'", "':='" ]

    symbolicNames = [ "<INVALID>", "RETURN", "CONTINUE", "BREAK", "DO", 
                      "TO", "DOWNTO", "INTTYPE", "FLOATTYPE", "VOIDTYPE", 
                      "BOOLTYPE", "STRINGTYPE", "CLASS", "EXTENDS", "STATIC", 
                      "FINAL", "NEW", "THIS", "NIL", "IF", "THEN", "ELSE", 
                      "FOR", "BOOLLIT", "SEMI", "COLON", "DOT", "COMMA", 
                      "LSB", "RSB", "LB", "RB", "LP", "RP", "COMPAREOP", 
                      "EQOP", "LOGICOP", "AMOP", "MDOP", "ADDOP", "MULOP", 
                      "DIVOP", "NOTEQOP", "INITOP", "LESSTHANOP", "LESSTHANEQOP", 
                      "OROP", "NOTOP", "MINUSOP", "FLOATDIVOP", "MODULUSOP", 
                      "EQUALOP", "GREATERTHANOP", "GREATERTHANOPEQ", "ANDOP", 
                      "CONCATOP", "ASSIGNOP", "KEYWORD", "ID", "INTLIT", 
                      "FLOATLIT", "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "WS", "COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_memberlist = 2
    RULE_member = 3
    RULE_attribute = 4
    RULE_mutableattribute = 5
    RULE_immutableattribute = 6
    RULE_attributelist = 7
    RULE_method = 8
    RULE_paramlist = 9
    RULE_paramlistrest = 10
    RULE_param = 11
    RULE_idlist = 12
    RULE_typedecl = 13
    RULE_primitype = 14
    RULE_arraytype = 15
    RULE_arraytypename = 16
    RULE_classtype = 17
    RULE_exp = 18
    RULE_exp1 = 19
    RULE_exp2 = 20
    RULE_exp3 = 21
    RULE_exp4 = 22
    RULE_exp5 = 23
    RULE_exp6 = 24
    RULE_exp7 = 25
    RULE_exp8 = 26
    RULE_exp9 = 27
    RULE_exp10 = 28
    RULE_explist = 29
    RULE_explistrest = 30
    RULE_operands = 31
    RULE_blockstatement = 32
    RULE_vardecllist = 33
    RULE_vardecl = 34
    RULE_mutablevar = 35
    RULE_immutablevar = 36
    RULE_varlist = 37
    RULE_statementlist = 38
    RULE_statement = 39
    RULE_assignstatement = 40
    RULE_mutableattr = 41
    RULE_localvar = 42
    RULE_eleofarray = 43
    RULE_ifstatement = 44
    RULE_forstatement = 45
    RULE_breakstatement = 46
    RULE_continuestatement = 47
    RULE_returnstatement = 48
    RULE_methodinvostatement = 49
    RULE_arraylit = 50
    RULE_arraylitlist = 51
    RULE_arrayintlit = 52
    RULE_arrayfloatlit = 53
    RULE_arraystringlit = 54
    RULE_arrayboolit = 55

    ruleNames =  [ "program", "classdecl", "memberlist", "member", "attribute", 
                   "mutableattribute", "immutableattribute", "attributelist", 
                   "method", "paramlist", "paramlistrest", "param", "idlist", 
                   "typedecl", "primitype", "arraytype", "arraytypename", 
                   "classtype", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "explist", "explistrest", 
                   "operands", "blockstatement", "vardecllist", "vardecl", 
                   "mutablevar", "immutablevar", "varlist", "statementlist", 
                   "statement", "assignstatement", "mutableattr", "localvar", 
                   "eleofarray", "ifstatement", "forstatement", "breakstatement", 
                   "continuestatement", "returnstatement", "methodinvostatement", 
                   "arraylit", "arraylitlist", "arrayintlit", "arrayfloatlit", 
                   "arraystringlit", "arrayboolit" ]

    EOF = Token.EOF
    RETURN=1
    CONTINUE=2
    BREAK=3
    DO=4
    TO=5
    DOWNTO=6
    INTTYPE=7
    FLOATTYPE=8
    VOIDTYPE=9
    BOOLTYPE=10
    STRINGTYPE=11
    CLASS=12
    EXTENDS=13
    STATIC=14
    FINAL=15
    NEW=16
    THIS=17
    NIL=18
    IF=19
    THEN=20
    ELSE=21
    FOR=22
    BOOLLIT=23
    SEMI=24
    COLON=25
    DOT=26
    COMMA=27
    LSB=28
    RSB=29
    LB=30
    RB=31
    LP=32
    RP=33
    COMPAREOP=34
    EQOP=35
    LOGICOP=36
    AMOP=37
    MDOP=38
    ADDOP=39
    MULOP=40
    DIVOP=41
    NOTEQOP=42
    INITOP=43
    LESSTHANOP=44
    LESSTHANEQOP=45
    OROP=46
    NOTOP=47
    MINUSOP=48
    FLOATDIVOP=49
    MODULUSOP=50
    EQUALOP=51
    GREATERTHANOP=52
    GREATERTHANOPEQ=53
    ANDOP=54
    CONCATOP=55
    ASSIGNOP=56
    KEYWORD=57
    ID=58
    INTLIT=59
    FLOATLIT=60
    STRINGLIT=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    WS=64
    COMMENT=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.classdecl()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 117
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def memberlist(self):
            return self.getTypedRuleContext(BKOOLParser.MemberlistContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classdecl




    def classdecl(self):

        localctx = BKOOLParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(BKOOLParser.CLASS)
                self.state = 120
                self.match(BKOOLParser.ID)
                self.state = 121
                self.match(BKOOLParser.LP)
                self.state = 122
                self.memberlist()
                self.state = 123
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(BKOOLParser.CLASS)
                self.state = 126
                self.match(BKOOLParser.ID)
                self.state = 127
                self.match(BKOOLParser.EXTENDS)
                self.state = 128
                self.match(BKOOLParser.ID)
                self.state = 129
                self.match(BKOOLParser.LP)
                self.state = 130
                self.memberlist()
                self.state = 131
                self.match(BKOOLParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def memberlist(self):
            return self.getTypedRuleContext(BKOOLParser.MemberlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memberlist




    def memberlist(self):

        localctx = BKOOLParser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memberlist)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.member()
                self.state = 136
                self.memberlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.member()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(BKOOLParser.MethodContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_member




    def member(self):

        localctx = BKOOLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutableattribute(self):
            return self.getTypedRuleContext(BKOOLParser.MutableattributeContext,0)


        def immutableattribute(self):
            return self.getTypedRuleContext(BKOOLParser.ImmutableattributeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute




    def attribute(self):

        localctx = BKOOLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.mutableattribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.immutableattribute()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableattributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typedecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypedeclContext,0)


        def attributelist(self):
            return self.getTypedRuleContext(BKOOLParser.AttributelistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutableattribute




    def mutableattribute(self):

        localctx = BKOOLParser.MutableattributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mutableattribute)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(BKOOLParser.STATIC)
                self.state = 151
                self.typedecl()
                self.state = 152
                self.attributelist()
                self.state = 153
                self.match(BKOOLParser.SEMI)
                pass
            elif token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.typedecl()
                self.state = 156
                self.attributelist()
                self.state = 157
                self.match(BKOOLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableattributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typedecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypedeclContext,0)


        def attributelist(self):
            return self.getTypedRuleContext(BKOOLParser.AttributelistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutableattribute




    def immutableattribute(self):

        localctx = BKOOLParser.ImmutableattributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_immutableattribute)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(BKOOLParser.FINAL)
                self.state = 162
                self.match(BKOOLParser.STATIC)
                self.state = 163
                self.typedecl()
                self.state = 164
                self.attributelist()
                self.state = 165
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(BKOOLParser.STATIC)
                self.state = 168
                self.match(BKOOLParser.FINAL)
                self.state = 169
                self.typedecl()
                self.state = 170
                self.attributelist()
                self.state = 171
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 173
                self.match(BKOOLParser.FINAL)
                self.state = 174
                self.typedecl()
                self.state = 175
                self.attributelist()
                self.state = 176
                self.match(BKOOLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def INITOP(self):
            return self.getToken(BKOOLParser.INITOP, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def attributelist(self):
            return self.getTypedRuleContext(BKOOLParser.AttributelistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attributelist




    def attributelist(self):

        localctx = BKOOLParser.AttributelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributelist)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(BKOOLParser.ID)
                self.state = 181
                self.match(BKOOLParser.INITOP)
                self.state = 182
                self.exp()
                self.state = 183
                self.match(BKOOLParser.COMMA)
                self.state = 184
                self.attributelist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(BKOOLParser.ID)
                self.state = 187
                self.match(BKOOLParser.COMMA)
                self.state = 188
                self.attributelist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 189
                self.match(BKOOLParser.ID)
                self.state = 190
                self.match(BKOOLParser.INITOP)
                self.state = 191
                self.exp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 192
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def typedecl(self):
            return self.getTypedRuleContext(BKOOLParser.TypedeclContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(BKOOLParser.ParamlistContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockstatement(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstatementContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_method




    def method(self):

        localctx = BKOOLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method)
        try:
            self.state = 216
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.match(BKOOLParser.STATIC)
                self.state = 196
                self.typedecl()
                self.state = 197
                self.match(BKOOLParser.ID)
                self.state = 198
                self.match(BKOOLParser.LB)
                self.state = 199
                self.paramlist()
                self.state = 200
                self.match(BKOOLParser.RB)
                self.state = 201
                self.blockstatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.typedecl()
                self.state = 204
                self.match(BKOOLParser.ID)
                self.state = 205
                self.match(BKOOLParser.LB)
                self.state = 206
                self.paramlist()
                self.state = 207
                self.match(BKOOLParser.RB)
                self.state = 208
                self.blockstatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 210
                self.match(BKOOLParser.ID)
                self.state = 211
                self.match(BKOOLParser.LB)
                self.state = 212
                self.paramlist()
                self.state = 213
                self.match(BKOOLParser.RB)
                self.state = 214
                self.blockstatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def paramlistrest(self):
            return self.getTypedRuleContext(BKOOLParser.ParamlistrestContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramlist




    def paramlist(self):

        localctx = BKOOLParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist)
        try:
            self.state = 224
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 218
                self.param()
                self.state = 219
                self.match(BKOOLParser.SEMI)
                self.state = 220
                self.paramlistrest()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 222
                self.param()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistrestContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def paramlistrest(self):
            return self.getTypedRuleContext(BKOOLParser.ParamlistrestContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramlistrest




    def paramlistrest(self):

        localctx = BKOOLParser.ParamlistrestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramlistrest)
        try:
            self.state = 231
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 226
                self.param()
                self.state = 227
                self.match(BKOOLParser.SEMI)
                self.state = 228
                self.paramlistrest()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 230
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
